; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/um/kernel/extr_trap.c_bus_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/um/kernel/extr_trap.c_bus_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }
%struct.uml_pt_regs = type { i32 }

@current = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bus_handler(i32 %0, %struct.uml_pt_regs* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.uml_pt_regs*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.uml_pt_regs* %1, %struct.uml_pt_regs** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @current, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @current, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @UML_LONGJMP(i32* %14, i32 1)
  br label %20

16:                                               ; preds = %2
  %17 = load i32, i32* %3, align 4
  %18 = load %struct.uml_pt_regs*, %struct.uml_pt_regs** %4, align 8
  %19 = call i32 @relay_signal(i32 %17, %struct.uml_pt_regs* %18)
  br label %20

20:                                               ; preds = %16, %10
  ret void
}

declare dso_local i32 @UML_LONGJMP(i32*, i32) #1

declare dso_local i32 @relay_signal(i32, %struct.uml_pt_regs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
